# scRNA-Project

./: README.md  environment.yml  pyproject.toml  requirements.txt  sc-RNAGES146912.ipynb  sc-RNAGES146912_PEC_injury_cellcomm.ipynb
config/: default.yaml  liu2023_kidney_int.yaml  local.yaml  local.yaml.example
docs/: DATA_DOWNLOAD.md  METHODS_PAPER_ALIGNMENT.md
notebooks/: Reproduce_pipeline.ipynb
results/provenance/: run_manifest.json  step_batch_balance.json  step_cell_type_scoring.json  step_event_flow_prototype.json  step_flowsig_stage.json  step_injury_symbol_collapse.json  step_liana_skipped.json  step_marker_symbol_to_ensembl.json  step_normalization_heuristic.json  step_paper_replication_warning.json
results/tables/: PEC_subcluster_markers_wilcox.csv  PEC_subcluster_mean_lineage_scores.csv  cell_type_major_counts.csv
results/tables/PEC_GO_enrichr/: GO_BP_cluster_0.csv  GO_BP_cluster_1.csv  GO_BP_cluster_10.csv  GO_BP_cluster_11.csv  GO_BP_cluster_12.csv  GO_BP_cluster_13.csv  GO_BP_cluster_14.csv  GO_BP_cluster_15.csv  GO_BP_cluster_16.csv  GO_BP_cluster_17.csv  GO_BP_cluster_18.csv  GO_BP_cluster_2.csv  GO_BP_cluster_3.csv  (+6 more)
scripts/: build_injury_comm_notebook.py  cellchat_GSE146912_PEC.R  pyscenic_mouse_GSE146912.sh  run_event_flow.py  run_flowsig.py  run_pipeline.py
src/gse146912_pipeline/: __init__.py  annotation.py  config.py  event_flow.py  flowsig_stage.py  genes.py  injury.py  injury_comm.py  markers.py  pec.py  pipeline_main.py  provenance.py  qc.py
src/gse146912_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+35 files in other folders)
